<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rectangle_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activities"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_activity"
            />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/purple_200"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/create" />

    <ProgressBar
        android:id="@+id/barProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_vertical"
        android:visibility="gone"
        android:layout_marginBottom="25dp"
        />

    <TextView
        android:id="@+id/tvConnectionStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#F30328"
        android:text="@string/no_connection"
        android:gravity="center"
        android:textColor="@color/white"
        android:visibility="gone"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="85dp"
        />

    <TextView
        android:id="@+id/tvEmptyWaring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_activities"
        />
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="560dp"
        android:background="@drawable/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <ImageButton
        android:id="@+id/ivHome"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/ic_grey_home"
        app:layout_constraintTop_toTopOf="@id/rectangle_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_2"
        android:layout_marginStart="90dp"
        android:elevation="10dp"
        android:contentDescription="@string/user_avatar" />
    <ImageButton
        android:id="@+id/ivSheet"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:background="@drawable/ic_sheet_home"
        app:layout_constraintTop_toTopOf="@id/rectangle_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_2"
        android:layout_marginEnd="90dp"
        android:elevation="10dp"
        android:contentDescription="@string/go_to_different_activity" />
</androidx.constraintlayout.widget.ConstraintLayout>