<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >

    <ImageView
        android:id="@+id/imageStrava"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/strava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Text label -->
    <TextView
        android:id="@+id/text_label"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="15sp"
        android:text="@string/text_label"
        android:textAppearance="@style/text_label" />
    <!-- Line 1 -->
    <View
        android:id="@+id/line_1"
        android:layout_width="104dp"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="361dp"
        android:background="@drawable/line_1"
        />

    <View
        android:id="@+id/line_2"
        android:layout_width="104dp"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="232dp"
        android:background="@drawable/line_2" />

    <View
        android:id="@+id/type_outlin"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="408dp"
        android:layout_marginRight="40dp"
        android:background="#A4ACB1AC"
        android:clickable="true" />

    <TextView
        android:id="@+id/tv_continue_wi"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="420dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/continue_wi"
        android:textAppearance="@style/continue_wi" />
    <View
        android:id="@+id/iv_rectangle_logo"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="419dp"
        android:background="@drawable/rectangle_logo"
        />

    <TextView
        android:id="@+id/btEng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="140dp"
        android:layout_marginTop="520dp"
        android:textSize="20sp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:text="@string/eng"
        android:textColor="@color/purple_500" />

    <TextView
        android:id="@+id/btRus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="140dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:text="@string/rus"
        android:textColor="@color/purple_500"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/barProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:layout_marginStart="170dp"
        android:layout_gravity="center_vertical"
        android:visibility="gone" />

</RelativeLayout>